--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,9 @@
 
 
     <!-- Primary Meta Tags -->
-    <title>Contact Us - INC SHIPPING</title>
-    <meta name="description" content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight
-        Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
+    <title>INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE</title>
+    <meta name="description"
+        content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
     <meta name="keywords"
         content="Contact Air freight company in Dubai, Contact International Cargo Services Dubai, UAE, Contact Shipping and Logistics Company in Dubai, Contact Sea Freight,    Contact Road Freight Services in Dubai, Contact Temperature Control Cargo Service Dubai, Contact Cross Trade Service Company in Dubai, Contact Corporate Courier Service in Dubai, Contact Medical Equipment Shipping Services in Dubai, Contact Sea Freight Services in Dubai, Contact Customs Clearance Services in Dubai, Contact Warehousing Company in Dubai / UAE, Contact Hazardous goods, shipping services in Dubai, Contact Pharmaceutical shipping service in Dubai" />
     <meta name="language" content="english" />
@@ -48,28 +48,29 @@
     <meta name="rating" content="General" />
     <meta name="robots" content="follow,index" />
     <link rel="canonical" href="https://incshipping.com/contact" />
-    <meta name="DC.title" content="Contact Us - INC SHIPPING" />
+    <meta name="DC.title" content="INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE" />
     <meta name="geo.region" content="AE" />
     <meta name="geo.placename" content="Atmar" />
     <meta name="geo.position" content="25.3;55.4" />
     <meta name="ICBM" content="25.3, 55.4" />
 
     <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Contact Us - INC SHIPPING" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content="https://incshipping.com/contact" />
+    <meta property="og:title" content=INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE>
+    <meta property="og:site_name" content=INC Express Shipping L.L.C>
+    <meta property="og:url" content="https://incshipping.com/contact">
     <meta property="og:description"
         content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
-    <meta property="og:type" content=website />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://incshipping.com/contact" />
-    <meta property="twitter:title" content="Contact Us - INC SHIPPING" />
+    <meta property="twitter:title" content="INC SHIPPING: Contact for Best Shipping Company in Dubai, UAE" />
     <meta property="twitter:description"
         content="Contact INC Express Shipping at +971 503524424. Visit us at Office M29, Freight Gate 4, Dubai Airport Freezone, Dubai, UAE for all your shipping needs." />
     <meta property="twitter:image" content="" />
+
 
 
 
@@ -103,7 +104,8 @@
         <header class="header">
             <div style="margin: 0;" class="row">
                 <div style="padding: 0;" class="col-xl-3 col-lg-3 col-md-3 col-sm-6 col-xs-6 nav_logo_col">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                 </div>
 
                 <!-- NAVBAR FOR DESKTOP -->
@@ -329,7 +331,8 @@
         <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12">
                 <div class="footer_logo_container">
-                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp" alt="INC Shipping Logo Design">
+                    <img onclick="window.location.href='index.html'" src="img/inc_nav_logo.webp"
+                        alt="INC Shipping Logo Design">
                     <p>INC Express Shipping LLC, being one of the dedicated logistics, warehousing and shipping company
                         in Dubai</p>
                 </div>
@@ -394,7 +397,8 @@
         <div class="row">
             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-12 col-12 footer_copyright">
                 <p>© 2024 INC Express Shipping LLC. All Rights Reserved. <a href="privacy-policy.html">Privacy
-                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a href="sitemap.html">Sitemap</a></p>
+                        Policy</a> | <a href="terms-and-conditions.html">Terms of Service</a> | <a
+                        href="sitemap.html">Sitemap</a></p>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 footer_copyright">
                 <p>Designed and Developed by: <a target="_blank" href="https://illforddigital.com/">Illford Digital</a>
