--- a/services.html
+++ b/services.html
@@ -38,6 +38,35 @@
 
 
 
+<!-- Primary Meta Tags -->
+<title>Shipping Agency in Dubai | Sea, Air & Land Freight Services</title>
+<meta name="description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer."/>
+<meta name="keywords" content="Cross Trade Service Company in Dubai, Corporate Courier  Company in Dubai, Medical Equipment Shipping Services in Dubai, Sea Freight Services in Dubai, UAE, Customs Clearance Services in UAE, Warehousing Services in Dubai, Best Courier Channel Partners  Dubai, Hazardous Goods Shipping Services in UAE, Pharmaceutical Shipping Service in UAE, Air Freight Service in Dubai"/>
+<meta name="language" content="english" />
+<meta name="content-language" content="english" />
+<meta name="rating" content="General" />
+<meta name="robots" content="follow,index" />
+<link rel="canonical" href="https://incshipping.com/services" />
+<meta name="DC.title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services" />
+<meta name="geo.region" content="AE" />
+<meta name="geo.placename" content="Atmar" />
+<meta name="geo.position" content="25.3;55.4" />
+<meta name="ICBM" content="25.3, 55.4" />
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services" />
+<meta property="og:site_name" content="INC Express Shipping L.L.C"/>
+<meta property="og:url" content="https://incshipping.com/services">
+<meta property="og:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer."/>
+<meta property="og:type" content="website"/>
+<meta property="og:image" content="/">
+
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image"/>
+<meta property="twitter:domain" content="incshipping.com"/>
+<meta property="twitter:url" content="https://incshipping.com/services"/>
+<meta name="twitter:title" content="Shipping Agency in Dubai | Sea, Air & Land Freight Services "/>
+<meta name="twitter:description" content="INC Express Shipping LLC: Your trusted Shipping Agency in Dubai. We offer expert logistics services, ensuring hassle-free customs clearance and secure cargo transfer"/>
 
 
 
