--- a/sitemap.html
+++ b/sitemap.html
@@ -250,75 +250,83 @@ Welcome to INC Express Shipping LLC's official website. Agree to our Terms and C
 
 
     <section class="terms_conditions">
-        <div class="terms_conditions_container">
+        <div class="sitemap_container">
             <p><strong><a href="https://www.incshipping.com/"
-                        title="Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING">Home - Best Logistics
-                        and Shipping Company in Dubai, UAE | INC SHIPPING</a></strong></p>
+                        title="Best Logistics and Shipping Company in Dubai, UAE | INC SHIPPING">Home</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/about"
-                        title="Shipping Services in Dubai | About INC SHIPPING">About - Shipping Services in Dubai |
-                        About INC SHIPPING</a></strong></p>
-            <p><strong><a href="https://www.incshipping.com/services" title="INC-Services">Services -
-                        INC-Services</a></strong></p>
+                        title="Shipping Services in Dubai | About INC SHIPPING">About</a></strong></p>
+            <p><strong><a href="https://www.incshipping.com/services" title="INC-Services">Global Shipping Services
+                    </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/air-freight"
-                        title="Air Freight Forwarding Company in Dubai | International Freight Shipping">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Air Freight Forwarding Company in Dubai | International Freight Shipping</a></strong></p>
+                        title="Air Freight Forwarding Company in Dubai | International Freight Shipping">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Air Freight Forwarding</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/sea-freight"
-                        title="Sea Freight Forwarding Company in Dubai | INC Shipping Services">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Sea Freight Forwarding Company in Dubai | INC Shipping Services</a></strong></p>
+                        title="Sea Freight Forwarding Company in Dubai | INC Shipping Services">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Sea Freight Services</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/road-freight"
-                        title="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Road Freight Forwarding Services in Dubai | Road Transporters in Dubai</a></strong></p>
+                        title="Road Freight Forwarding Services in Dubai | Road Transporters in Dubai">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Road Freight Forwarding Services</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/customs-clearance"
-                        title="Customs Clearance Services in Dubai | Customs Clearance Agent UAE">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Customs Clearance Services in Dubai | Customs Clearance Agent UAE</a></strong></p>
+                        title="Customs Clearance Services in Dubai | Customs Clearance Agent UAE">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Customs Clearance Services</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/temprature-controlled-cargo"
-                        title="Temperature Control Cargo Service Dubai | INC Shipping">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Temperature Control Cargo Service Dubai | INC Shipping</a></strong></p>
+                        title="Temperature Control Cargo Service Dubai | INC Shipping">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Temperature Control Cargo</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/warehousing"
-                        title="Warehousing Company in Dubai / UAE | Storage Service Provider">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Warehousing Company in Dubai / UAE | Storage Service Provider</a></strong></p>
+                        title="Warehousing Company in Dubai / UAE | Storage Service Provider">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Warehousing Services</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/cross-trade"
-                        title="Cross Trade Service Company in Dubai | INC Shipping Dubai">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Cross Trade Service Company in Dubai | INC Shipping Dubai</a></strong></p>
+                        title="Cross Trade Service Company in Dubai | INC Shipping Dubai">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Cross Trade Service </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/project-cargo"
-                        title="Project Cargo Logistics Dubai | Cargo Services in UAE">&nbsp;&nbsp;&nbsp;&nbsp;-- Project
-                        Cargo Logistics Dubai | Cargo Services in UAE</a></strong></p>
+                        title="Project Cargo Logistics Dubai | Cargo Services in UAE">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i> Project Cargo Logistics</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/corporate-courier"
-                        title="Courier Company in Dubai | INC Shipping Courier Services UAE">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Courier Company in Dubai | INC Shipping Courier Services UAE</a></strong></p>
+                        title="Courier Company in Dubai | INC Shipping Courier Services UAE">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Corporate Courier</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/channel-partner"
-                        title="Best Courier Channel Partners in Dubai | INC Shipping">&nbsp;&nbsp;&nbsp;&nbsp;-- Best
-                        Courier Channel Partners in Dubai | INC Shipping</a></strong></p>
+                        title="Best Courier Channel Partners in Dubai | INC Shipping">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i> Channel Partner</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/shipment-to-far-east"
-                        title="Shipment To Far East Dubai | Shipping Services To Far East">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Shipment To Far East Dubai | Shipping Services To Far East</a></strong></p>
+                        title="Shipment To Far East Dubai | Shipping Services To Far East">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Shipment To Far East </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/dangerous-goods"
-                        title="Dangerous Goods Shipping and Handling Services in Dubai | UAE">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Dangerous Goods Shipping and Handling Services in Dubai | UAE</a></strong></p>
+                        title="Dangerous Goods Shipping and Handling Services in Dubai | UAE">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Dangerous Goods Shipping </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/healthcare"
-                        title="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE</a></strong></p>
+                        title="Medical Equipment Shipping Dubai | Healthcare Instrument Shipping UAE">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Healthcare Instrument Shipping</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/pharma-shipment-handling"
-                        title="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments">&nbsp;&nbsp;&nbsp;&nbsp;--
-                        Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments</a></strong></p>
-            <p><strong><a href="https://www.incshipping.com/contact" title="Contact Us - INC SHIPPING">Contact Us - INC
-                        SHIPPING</a></strong></p>
+                        title="Pharmaceutical Shipping Service Dubai | UAE Pharma Shipments">&nbsp;&nbsp;&nbsp;&nbsp;<i
+                            class="fa-solid fa-arrow-right-long"></i>
+                        Pharmaceutical Shipping Service</a></strong></p>
+            <p><strong><a href="https://www.incshipping.com/contact"
+                        title="Contact Us - INC SHIPPING">Contact</a></strong></p>
             <p><strong><a href="https://www.incshipping.com/international-freight-forwarders"
                         title="International Cargo Services Dubai, UAE | International Freight Forwarders">International
-                        Cargo Services Dubai, UAE | International Freight Forwarders</a></strong></p>
+                        Cargo Services </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/privacy-policy"
-                        title="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai">Privacy Policy |
-                        INC Shipping - Your Perfect Shipping Partners in Dubai</a></strong></p>
+                        title="Privacy Policy | INC Shipping - Your Perfect Shipping Partners in Dubai">Privacy Policy
+                    </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/terms-and-conditions"
-                        title="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE">INC
-                        Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE</a></strong></p>
+                        title="INC Shipping Policies: Terms and Conditions for Shipping Services | Dubai, UAE">Terms and
+                        Conditions </a></strong></p>
             <p><strong><a href="https://www.incshipping.com/cookies-policy"
                         title="Cookies Policy | INC Shipping - Your Perfect Shipping Partners in Dubai">Cookies Policy |
-                        INC Shipping - Your Perfect Shipping Partners in Dubai</a></strong></p>
-            <p><strong><a href="https://www.incshipping.com/sitemap"
-                        title="Sitemap | INC Shipping - sitemap">Sitemap |
-                        INC Shipping - Your Perfect Shipping Partners in Dubai</a></strong></p>
-
+                        INC Shipping </a></strong></p>
+            <p><strong><a href="https://www.incshipping.com/sitemap" title="Sitemap | INC Shipping - sitemap">Sitemap |
+                        INC Shipping </a></strong></p>
         </div>
     </section>
 
