--- a/thankyou.html
+++ b/thankyou.html
@@ -211,7 +211,7 @@
             </div>
             <div class="about_hero-content">
                 <div class="about_hero_content_wrap">
-                    <h1 style="text-align: center; color: #000000;">THANK YOU!</h1>
+                    <h1 style=" text-align: center; color: #000000;">THANK YOU!</h1>
                     <p style="text-align: center; color: #000000;">For Contacting INC Express Shipping LLC!</p>
                 </div>
             </div>
@@ -230,7 +230,7 @@
     </section>
 
     <section class="thankyou_img">
-        <img src="img/avatar514.png" alt="INC Shipping Logo Design">
+        <img src="img/avatar514.webp" alt="INC Shipping Logo Design">
     </section>
 
     <section class="thankyou_why_choose">
@@ -246,27 +246,27 @@
 
     <section class="thankyou_next_steps row">
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 413t.png" alt="Minimal Risk INC Shipping">
+            <img src="img/Group 413t.webp" alt="Minimal Risk INC Shipping">
             <h6>Review Your Inquiry :</h6>
             <p>Our team will carefully review
                 the details of your request. </p>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 414t.png" alt="Rapid Speed Shipping Services">
+            <img src="img/Group 414t.webp" alt="Rapid Speed Shipping Services">
             <h6>Get in Touch :</h6>
             <p>We will contact you shortly to discuss
                 your needs and provide
                 personalized solutions.</p>
         </div>
         <div class="col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12 thankyou_next_steps_item">
-            <img src="img/Group 415t.png" alt="United Arab Emirates">
+            <img src="img/Group 415t.webp" alt="United Arab Emirates">
             <h6>Collaboration :</h6>
             <p>Work together to mobilize your
                 cargo with accuracy and speed. </p>
         </div>
     </section>
 
-    <img style="margin-bottom: 4%; width: 100%;" src="img/Vector 57.png" alt=" Road Freight Forwarding Services in Dubai">
+    <img style="margin-bottom: 4%; width: 100%;" src="img/Vector 57.webp" alt=" Road Freight Forwarding Services in Dubai">
 
     <div style="padding-bottom: 50px;" class="contact_bg row">
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-0 col-0 home_contact_col1 animate fadeRight">
