--- a/warehousing.html
+++ b/warehousing.html
@@ -35,38 +35,35 @@
 
 
     <!-- Primary Meta Tags -->
-    <title>Warehousing Company in Dubai / UAE | Storage Service Provider </title>
-    <meta name="description" content="INC Express: Leading Warehousing Company in Dubai/UAE. Offering secure,
-        cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-    <meta name="keywords"
-        content="Warehousing in UAE, Top Warehouse Company in Dubai, Warehouse Storage Services in Dubai, Warehousing and Logistics Companies in Dubai, Storage Service Provider in Dubai, Storage Space and Warehouse Facility Dubai, Warehouse Storage in Dubai, Shipping and Logistics Company in Dubai, Corporate Courier Service in Dubai, Warehousing and Distribution Service, Supply Chain Management Dubai " />
-    <meta name="language" content="english" />
-    <meta name="content-language" content="english" />
-    <meta name="rating" content="General" />
-    <meta name="robots" content="follow,index" />
-    <link rel="canonical" href="https://incshipping.com/warehousing" />
-    <meta name="DC.title" content="Warehousing Company in Dubai / UAE | Storage Service Provider" />
-    <meta name="geo.region" content="AE" />
-    <meta name="geo.placename" content="Atmar" />
-    <meta name="geo.position" content="25.3;55.4" />
-    <meta name="ICBM" content="25.3, 55.4" />
+  <title>Warehousing Company in Dubai, UAE | Storage Service Provider </title>
+  <meta name="description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+  <meta name="keywords" content="Warehousing in UAE, Top Warehouse Company in Dubai, Warehouse Storage Services in Dubai, Warehousing and Logistics Companies in Dubai, Storage Service Provider in Dubai, Storage Space and Warehouse Facility Dubai, Warehouse Storage in Dubai, Shipping and Logistics Company in Dubai, Corporate Courier Service in Dubai, Warehousing and Distribution Service, Supply Chain Management Dubai "/>
+  <meta name="language" content="english" />
+  <meta name="content-language" content="english" />
+  <meta name="rating" content="General" />
+  <meta name="robots" content="follow,index" />
+  <link rel="canonical" href="https://incshipping.com/warehousing" />
+  <meta name="DC.title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+  <meta name="geo.region" content="AE" />
+  <meta name="geo.placename" content="Atmar" />
+  <meta name="geo.position" content="25.3;55.4" />
+  <meta name="ICBM" content="25.3, 55.4" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:title" content="Warehousing Company in Dubai / UAE | Storage Service Provider" />
-    <meta property="og:site_name" content="INC Express Shipping L.L.C" />
-    <meta property="og:url" content=https://incshipping.com/warehousing>
-    <meta property="og:description" content="INC Express: Leading Warehousing Company in Dubai/UAE. Offering secure,
-        cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-    <meta property="og:type" content=website />
-    <meta property="og:image" content="" />
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" >
+<meta property="og:site_name" content="INC Express Shipping L.L.C">
+<meta property="og:url" content=https://incshipping.com/warehousing>
+<meta property="og:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." >
+<meta property="og:type" content="website">
+<meta property="og:image" content="">
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://incshipping.com/warehousing" />
-    <meta property="twitter:title" content="Warehousing Company in Dubai / UAE | Storage Service Provider" />
-    <meta property=" twitter:description"
-        content="INC Express: Leading Warehousing Company in Dubai/UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
-    <meta property="twitter:image" content="" />
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://incshipping.com/warehousing" />
+<meta property="twitter:title" content="Warehousing Company in Dubai, UAE | Storage Service Provider" />
+<meta property="twitter:description" content="INC Express: Leading Warehousing Company in Dubai, UAE. Offering secure, cost-effective solutions with integrated systems, local transport, and efficient order processing." />
+<meta property="twitter:image" content="" />
+
 
 
 
